aligned h2 with p fixed h2 on mobile adjusted bio block

--- a/pages/article/article.css
+++ b/pages/article/article.css
@@ -51,7 +51,7 @@
 .page-type-article .content h2{
     font-size: var(--h2-font-size);
     padding-top: 1em;
-    text-align: center;
+    padding-left: 5.5em;
     font-weight: normal;
 
 }
@@ -66,7 +66,7 @@ body > main > div > div > div.header.block > div > div:nth-child(1){
     width: 100%;
     height: 75%;
 }
-.page-type-article main > div > div > p {
+.page-type-article p {
     font-size: 1.5em;
     text-align: left;
     padding-left: 11em;
@@ -75,6 +75,7 @@ body > main > div > div > div.header.block > div > div:nth-child(1){
 .page-type-article .content li{
     padding-left: 9.4em;
     padding-right: 4em;
+    padding-bottom: 1em;
     font-size: var(--li-font-size);
 }
 .page-type-article .article-picture{
@@ -115,7 +116,7 @@ body > main > div > div.content > picture > img{
 }
 .page-type-article .additional-reading.block h2{
     padding: 0;
-    padding-left: 5.5em;
+    padding-left: 4.2em;
     text-align: left;
 }
 .page-type-article .additional-reading.block p{
@@ -351,6 +352,9 @@ body > main > div > div.content > picture > img{
         width: 100%;
         padding: 0;
     }
+    .page-type-article .content h2{
+        padding: 0;
+    }
     .page-type-article main > div > div > p{
         padding: 0;
     }
@@ -368,9 +372,13 @@ body > main > div > div.content > picture > img{
     }
     .page-type-article .content li{
         padding: 0;
+        padding-bottom: 1em;
     }   
     .page-type-article .additional-reading.block{
         width: auto;
+        padding: 0;
+    }
+    .page-type-article .additional-reading.block h2{
         padding: 0;
     }
     .page-type-article .additional-reading.block p{
@@ -388,6 +396,9 @@ body > main > div > div.content > picture > img{
     }
     .page-type-article .author-bio > div{
         margin: 0;
+    }
+    .page-type-article .author-bio.block p{
+        padding: 0;
     }
     /* authod bio block */
 }   
@@ -418,8 +429,19 @@ body > main > div > div.content > picture > img{
     .page-type-article main{
        width: 90%;
     }
+    .page-type-article .content .lede.block{
+        padding-right: 0;
+        padding-right: 1em;
+    }
+    .page-type-article .content h2{
+        padding-left: 4.4em;
+    }
     .page-type-article main > div > div > p{
         padding-left: 9em;
+        padding-right: 0;
+    }
+    .page-type-article .content li{
+        padding-right: 0;
     }
     .page-type-article .author-bio.block > div{
         margin: 0 10% 5em 10%;
